--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO:
 - allow binding specs to declare required bindings
+- delete unwanted __init__ attributes
 - describe features specifically omitted, e.g.,
   - field injection
   - circular injection
