--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 TODO:
 - deprecate @injectable
-- allow provider methods & initializers to have & use *pargs, **kwargs
+- improve DirectlyPassingInjectedArgsError
 - auto-require provider method args
-- allow passing args to provider methods
 - move obj_provider into injection_context, so that provisers only have one arg?
 - allow object_graph.provide('arg name')?
 - describe features specifically omitted, e.g.,
